done half footer adaptive

--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -41,7 +41,6 @@ footer {
         font-size: 1.3rem;
         font-style: normal;
         font-weight: 300;
-        line-height: 50px;
         letter-spacing: 0.44px;
         list-style-type: none;
         width: 100%;
@@ -69,41 +68,62 @@ footer {
 
   @media only screen and (min-width: 320px) and (max-width: 426px) {
     .footer-content {
-      .row-1,
-      .row-2,
-      .row-3,
-      .row-4 {
-        width: 80%;
-      }
-
-      ul {
-        li {
-          font-size: 1.3rem;
-          line-height: 40px;
-        }
-      }
-    }
-
-    .logo {
-      padding-left: 7vw;
-      padding-top: 5vh;
-    }
-
-    .social-media {
-      ul li {
-        margin-right: 1rem;
-      }
-    }
-  }
-
-  @media only screen and (min-width: 426px) and (max-width: 768px) {
-    .footer-content {
-      margin: 0 10%;
+      padding-bottom: 0;
       .row-1,
       .row-2,
       .row-3,
       .row-4 {
         width: calc(50% - 25px);
+        margin: 0 -10px;
+        ul li:first-child {
+          font-size: 1.2rem;
+        }
+        ul li {
+          font-size: 1rem;
+          line-height: 1.2rem;
+        }
+      }
+    }
+    .social-media {
+      margin-bottom: 0;
+      ul li {
+        margin-right: 1rem;
+        img {
+          width: 26px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (min-width: 426px) and (max-width: 769px) {
+    .footer-content {
+      padding-bottom: 2rem;
+      .row-1,
+      .row-2,
+      .row-3,
+      .row-4 {
+        width: calc(50% - 25px);
+
+        ul li:first-child {
+          font-size: 1.5rem;
+        }
+        ul {
+          margin: 0 45px;
+          li {
+            font-size: 1.2rem;
+            line-height: 1.2rem;
+          }
+        }
+      }
+    }
+
+    .social-media {
+      margin-bottom: 0;
+      ul li {
+        margin-right: 1rem;
+        img {
+          width: 35px;
+        }
       }
     }
   }
