--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -37,8 +37,8 @@ footer {
 
       ul li {
         color: #fff;
-        font-family: Montserrat;
-        font-size: 1.3rem;
+        font-family: "Montserrat";
+        font-size: 1.3vw;
         font-style: normal;
         font-weight: 300;
         letter-spacing: 0.44px;
