--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -6,10 +6,13 @@
   
   .mob-nav{
     background-color: #fff;
-    box-shadow: 0 3px 10px 0px #000;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding:15px;
     z-index: 99;
     width: 100%;
+    @media screen and (max-width: 768px){
+      margin-bottom: 60px;
+    }
   }
 
   .row{
