--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -19,7 +19,7 @@
   border: none;
   font-size: 3rem;
   font-size: 1.5vw;
-  width: 19vw;
+  width: 19vw;  
   padding: 0.4em;
   border: 3px solid #19746b;
   color: #19746b;
@@ -54,7 +54,6 @@
 @media screen and (max-width: 768px) {
   .col_6 {
     width: 100%;
-    margin-top: 70px;
   }
 
   .button {
@@ -80,6 +79,10 @@
 @media screen and (max-width: 480px) {
   .container {
     width: 90%;
+  }
+
+  .row{
+    padding-block: 15vh;
   }
 
   .col-6 {
