--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -18,18 +18,23 @@
 .button {
   border: none;
   font-size: 3rem;
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   width: 19vw;
   padding: 0.4em;
-  border: 3px solid #19746B;
-  color: #19746B;
+  border: 3px solid #19746b;
+  color: #19746b;
   border-radius: 10px;
   float: right;
+  transition: all 0.2s;
+  &:hover {
+    background-color: #19746b;
+    color: #fff;
+    transition: all 0.2s;
+  }
 }
 
-
 .title {
-  font-size: 1.8rem;
+  font-size: 1.8vw;
   font-weight: 700;
   font-family: "Inter";
 }
@@ -45,38 +50,36 @@
   max-width: 100%;
   height: auto;
 }
-@media screen and (max-width: 1024px) {
-  .title {
-    font-size: 1.1rem;
-  }
-}
-
 
 @media screen and (max-width: 768px) {
   .col_6 {
     width: 100%;
+    margin-top: 70px;
   }
 
   .button {
     width: 60%;
     margin-top: 20px;
+    font-size: 4vw;
     padding: 0.4em;
   }
 
   .title,
   .text {
     width: 100%;
-    margin: 10px 0; 
+    margin: 10px 0;
   }
   .title {
-    font-size: 1.9rem; 
+    font-size: 1.9rem;
   }
-
+  .text {
+    font-size: 4vw;
+  }
 }
 
 @media screen and (max-width: 480px) {
   .container {
-    width: 90%; 
+    width: 90%;
   }
 
   .col-6 {
@@ -85,22 +88,23 @@
 
   .button {
     width: 60%;
-    margin-top: 15px; 
+    font-size: 5vw;
+    margin-top: 15px;
     padding: 0.4em;
   }
 
   .title {
-    font-size: 1.2rem; 
+    font-size: 7vw;
   }
 
   .text {
-    font-size: 1.5vw; 
-    margin: 10px 0; 
+    font-size: 5vw;
+    margin: 10px 0;
   }
 }
 @media screen and (max-width: 320px) {
   .container {
-    width: 90%; 
+    width: 90%;
   }
 
   .col_6 {
@@ -109,16 +113,17 @@
 
   .button {
     width: 60%;
-    margin-top: 15px; 
+    font-size: 5vw;
+    margin-top: 15px;
     padding: 0.4em;
   }
 
   .title {
-    font-size: 0.8rem; 
+    font-size: 6vw;
   }
 
   .text {
-    font-size: 1.5vw; 
-    margin: 10px 0; 
+    font-size: 5vw;
+    margin: 10px 0;
   }
 }
