--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -1,152 +1,154 @@
 .parentContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 8.125vw;
-  padding-top: 50px;
-  padding-bottom: 140px;
-}
-
-.servicesContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  gap: 1.25em;
-  justify-content: center;
-  margin-top: 7vh;
-  margin-bottom: 5.333rem;
-}
-
-.serviceItem {
-  display: flex;
-  align-items: center;
-}
-
-.serviceItem img {
-  max-width: 100%; 
-  height: auto;
-  margin-right: 1.25em; 
-}
-
-h1 {
-  font-family: 'SemiBold';
-  margin-top: 3.125rem;
-  font-size: 3.5rem;
-  align-self: flex-start; 
-  margin-bottom: 70px;
-}
-
-.paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-  font-weight: bold;
-  font-family: 'Montserrat';
-  font-size: 1.6rem; 
-  margin-bottom: 0.625em; 
-}
-
-.span1, .span2, .span3, .span4 {
-  font-size: 1.9rem; 
-  margin-top: 0.3125em;
-  font-family: 'Montserrat'; 
-}
-
-@media screen and (max-width: 56.25em) {
-  .servicesContainer {
-    grid-template-columns: repeat(1, 1fr); 
-  }
-  h1{
-    align-self: center;
-    font-size: 2rem;
-  }
-
-  .serviceItem {
-    flex-direction: row; 
+    display: flex;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 1.875em;
-  }
-
-  .serviceItem img {
-    margin-right: 1.875em;
-    width: 9.375em; 
-  }
-
-  h1 {
-    margin-top: 1.875em;
-    font-size: 2rem; 
-  }
-
-  .parentContainer {
-    margin-left: 1.25em;
-  }
-
-  .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-    font-size: 1.6rem; 
-    margin-bottom: 0.5em; 
-  }
-  .span1,.span2,.span3,.span4{
-    font-size: 1.8rem;
-  }
-}
-
-@media screen and (max-width: 48.75em) {
-.serviceItem img {
-  width: 6.25em;
-  margin-right: 1.875em;
-  }
-  .serviceItem {
-    flex-direction: row; 
-    align-items: center;
-    margin-bottom: 1.875em;
-  }
-
-  .serviceItem img {
-    margin-right: 1.875em;
-    width: 6.25em; 
-  }
-
-  h1 {
-    margin-top: 1.875em;
-    font-size: 1.5rem; 
-  }
-
-  .parentContainer {
-    margin-left: 1.25em;
-  }
-
-  .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-    font-size: 1.7rem; 
-    margin-bottom: 0.5em; 
-  }
-}
-
-@media screen and (max-width: 30em) {
-  .serviceItem img {
-    width: 6.25em;
-    margin-right: 1.875em;
+    flex-direction: column;
+    margin-left: 8.125vw;
+    padding-top: 50px;
+    padding-bottom: 140px;
+  
+    .servicesContainer {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1.25em;
+      justify-content: center;
+      margin-top: 7vh;
+      margin-bottom: 5.333rem;
+  
+      .serviceItem {
+        display: flex;
+        align-items: center;
+        margin-bottom: 40px; 
+  
+        img {
+          max-width: 100%;
+          height: auto;
+          margin-right: 1.25em;
+        }
+      }
+    }
+  
+    h1 {
+      font-family: 'SemiBold';
+      margin-top: 3.125rem;
+      font-size: 3.5rem;
+      align-self: flex-start;
+      margin-bottom: 70px;
+    }
+  
+    .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
+      font-weight: bold;
+      font-family: 'Montserrat';
+      font-size: 1.6rem;
+      margin-bottom: 0.625em;
+    }
+  
+    .span1,.span2, .span3,.span4 {
+      font-size: 1.9rem;
+      margin-top: 0.3125em;
+      font-family: 'Montserrat';
+    }
+  
+    @media screen and (max-width: 1024px) {
+      .servicesContainer {
+        grid-template-columns: repeat(1, 1fr);
+      }
+      h1 {
+        align-self: center;
+        font-size: 2rem;
+      }
+  
+      .serviceItem {
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 1.875em;
+  
+        img {
+          margin-right: 1.875em;
+          width: 9.375em;
+        }
+      }
+  
+      h1 {
+        margin-top: 1.875em;
+        font-size: 2rem;
+      }
+  
+      .parentContainer {
+        margin-left: 1.25em;
+      }
+  
+      .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
+        font-size: 1.6rem;
+        margin-bottom: 0.5em;
+      }
+      .span1,.span2,.span3,.span4 {
+        font-size: 1.8rem;
+      }
+    }
+  
+    @media screen and (max-width: 768px) {
+      .serviceItem img {
+        width: 6.25em;
+        margin-right: 1.875em;
+      }
+      .serviceItem {
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 1.875em;
+  
+        img {
+          margin-right: 1.875em;
+          width: 6.25em;
+        }
+      }
+  
+      h1 {
+        margin-top: 1.875em;
+        font-size: 1.5rem;
+      }
+  
+      .parentContainer {
+        margin-left: 1.25em;
+      }
+  
+      .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
+        font-size: 1.7rem;
+        margin-bottom: 0.5em;
+      }
+    }
+  
+    @media screen and (max-width: 480em) {
+      .serviceItem img {
+        width: 6.25em;
+        margin-right: 1.875em;
+      }
+    }
+  
+    @media screen and (max-width: 320px) {
+      .serviceItem img {
+        width: 4.375em;
+        margin-right: 1.25em;
+      }
+  
+      h1 {
+        font-size: 1.5rem;
+        margin-top: 1.875em;
+      }
+  
+      .parentContainer {
+        margin-left: 5%;
+      }
+  
+      .paragraph1,.paragraph2,.paragraph3, .paragraph4 {
+        font-size: 1.1rem;
+        margin-bottom: 0.375em;
+      }
+      .span1,.span2,.span3,.span4 {
+        font-size: 1.1rem;
+        margin-top: 0.3125em;
+        font-family: 'Montserrat';
+      }
     }
   }
-
-@media screen and (max-width: 20em) {
-  .serviceItem img {
-    width: 4.375em;
-    margin-right: 1.25em;
-  }
-
-  h1 {
-    font-size: 1.5rem; 
-    margin-top: 1.875em;
-  }
-
-  .parentContainer {
-    margin-left: 5%;
-  }
-
-  .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-    font-size: 1.1rem; 
-    margin-bottom: 0.375em;
-  }
-  .span1, .span2, .span3, .span4 {
-    font-size: 1.1rem; 
-    margin-top: 0.3125em;
-    font-family: 'Montserrat'; 
-  }
-}
+  
