--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -150,16 +150,15 @@ a {
 }
 
 @font-face {
-    font-family: "Inter";
-    src: url("../fonts/Inter-Bold.eot");
-    src:
-      url("../fonts/Inter-Bold.eot?#iefix") format("embedded-opentype"),
-      url("../fonts/Inter-Bold.woff2") format("woff2"),
-      url("../fonts/Inter-Bold.woff") format("woff"),
-      url("../fonts/Inter-Bold.ttf") format("truetype"),
-      url("../fonts/Inter-Bold.svg#Inter-Bold") format("svg");
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-  }
-  
+  font-family: "Inter";
+  src: url("../fonts/Inter-Bold.eot");
+  src:
+    url("../fonts/Inter-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Inter-Bold.woff2") format("woff2"),
+    url("../fonts/Inter-Bold.woff") format("woff"),
+    url("../fonts/Inter-Bold.ttf") format("truetype"),
+    url("../fonts/Inter-Bold.svg#Inter-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
