--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -4,7 +4,7 @@ footer {
   font-family: "Montserrat";
   .logo {
     padding-left: 5vw;
-    padding-top: 5vh;
+    padding-top: 6.25vh;
   }
   a {
     color: #fff;
@@ -13,7 +13,7 @@ footer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 7vh;
+    padding-top: 5vh;
     padding-bottom: 6vh;
     gap: 50px;
 
@@ -23,7 +23,7 @@ footer {
     .row-4 {
       width: 20%;
       ul li:first-child {
-        font-size: 1.7vw;
+        font-size: 1.8rem;
         font-weight: 600;
       }
 
@@ -38,11 +38,10 @@ footer {
       ul li {
         color: #fff;
         font-family: "Montserrat";
-        font-size: 1.3vw;
+        font-size: 1.3rem;
         font-style: normal;
         font-weight: 300;
         letter-spacing: 0.44px;
-        line-height: 55px;
         list-style-type: none;
         width: 100%;
       }
@@ -66,31 +65,31 @@ footer {
       margin-right: 0;
     }
   }
-  // adaptive
+
   @media only screen and (min-width: 320px) and (max-width: 426px) {
     .footer-content {
-      padding-bottom: 5vh;
+      padding-bottom: 0;
       .row-1,
       .row-2,
       .row-3,
       .row-4 {
         width: calc(50% - 25px);
-        margin: 0 -15px;
+        margin: 0 -10px;
         ul li:first-child {
-          font-size: 4vw;
+          font-size: 1.2rem;
         }
         ul li {
-          font-size: 3.7vw;
-          line-height: 1.5rem;
+          font-size: 1rem;
+          line-height: 1.2rem;
         }
       }
     }
     .social-media {
-      margin-bottom: 2vh;
+      margin-bottom: 0;
       ul li {
         margin-right: 1rem;
         img {
-          width: 7vw;
+          width: 26px;
         }
       }
     }
@@ -98,7 +97,7 @@ footer {
 
   @media only screen and (min-width: 426px) and (max-width: 769px) {
     .footer-content {
-      padding-bottom: 7vh;
+      padding-bottom: 2rem;
       .row-1,
       .row-2,
       .row-3,
@@ -106,24 +105,24 @@ footer {
         width: calc(50% - 25px);
 
         ul li:first-child {
-          font-size: 2.8vw;
+          font-size: 1.5rem;
         }
         ul {
           margin: 0 45px;
           li {
-            font-size: 2.4vw;
-            line-height: 2.5rem;
+            font-size: 1.2rem;
+            line-height: 1.2rem;
           }
         }
       }
     }
 
     .social-media {
-      margin-bottom: 5vh;
+      margin-bottom: 0;
       ul li {
         margin-right: 1rem;
         img {
-          width: 4.5vw;
+          width: 35px;
         }
       }
     }
