--- a/src/assets/styles/components/Catalog.module.scss
+++ b/src/assets/styles/components/Catalog.module.scss
@@ -1,9 +1,12 @@
 .container {
   position: relative;
   z-index: 99;
-
+  a{
+    color: #000;
+  }
   .container_childe {
-    background-color: white;
+    background-color: #f4f4f0;
+    border-top: 1px solid #19746b;
     padding: 30px 100px;
     font-family: "Montserrat";
     position: absolute;
@@ -33,7 +36,7 @@
   }
 
   .title {
-    color: #000;
+    color: #19746b;
     font-weight: 700;
     font-size: 22px;
   }
