--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -1,5 +1,6 @@
 .dropDown {
   position: relative;
+git 
   button {
     padding-left: 10px;
     background-color: transparent;
@@ -28,6 +29,8 @@
   }
 
   .dropdown-content {
+    padding: 5px;
+
     background-color: #fff;
     border-radius: 10px;
     opacity: 0;
@@ -39,6 +42,8 @@
     position: absolute;
     width: 100%;
     transition: all .3s;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
     button {
       background-color: #f5f7f2;
       border-radius: 7px;
