--- a/src/assets/styles/ui/LangSwitcher.scss
+++ b/src/assets/styles/ui/LangSwitcher.scss
@@ -1,6 +1,7 @@
 .dropDown {
   position: relative;
-git 
+  padding: 5px;
+
   button {
     padding-left: 10px;
     background-color: transparent;
