--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -5,15 +5,18 @@
     flex-direction: column;
     margin-left: 8.125vw;
     padding-top: 50px;
+    width: 90%;
+    margin : 0 auto;
     padding-bottom: 140px;
   
     .servicesContainer {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 1.25em;
+      gap: 3em;
       justify-content: center;
       margin-top: 7vh;
       margin-bottom: 5.333rem;
+      width: 90%;
   
       .serviceItem {
         display: flex;
@@ -21,9 +24,9 @@
         margin-bottom: 40px; 
   
         img {
-          max-width: 100%;
+          max-width: 180%;
           height: auto;
-          margin-right: 1.25em;
+          margin-right: 1.5em;
         }
       }
     }
@@ -31,22 +34,25 @@
     h1 {
       font-family: 'SemiBold';
       margin-top: 3.125rem;
-      font-size: 3.5rem;
+      font-size: 5vh;
       align-self: flex-start;
       margin-bottom: 70px;
+      margin-left: 100px;
     }
   
     .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
       font-weight: bold;
       font-family: 'Montserrat';
-      font-size: 1.6rem;
+      font-size: 4.5vh;
       margin-bottom: 0.625em;
+     margin-bottom: 20px;
     }
   
     .span1,.span2, .span3,.span4 {
-      font-size: 1.9rem;
+      font-size: 5.4vh;
       margin-top: 0.3125em;
       font-family: 'Montserrat';
+      margin: 0 auto;
     }
   
     @media screen and (max-width: 1024px) {
@@ -55,7 +61,7 @@
       }
       h1 {
         align-self: center;
-        font-size: 2rem;
+        font-size: 2vh;
       }
   
       .serviceItem {
@@ -71,7 +77,7 @@
   
       h1 {
         margin-top: 1.875em;
-        font-size: 2rem;
+        font-size: 2vh;
       }
   
       .parentContainer {
@@ -79,11 +85,13 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
-        font-size: 1.6rem;
+        font-size: 1.6vh;
         margin-bottom: 0.5em;
+        margin: 0 auto;
       }
       .span1,.span2,.span3,.span4 {
-        font-size: 1.8rem;
+        font-size: 1.8vh;
+        margin: 0 auto;
       }
     }
   
@@ -105,7 +113,8 @@
   
       h1 {
         margin-top: 1.875em;
-        font-size: 1.5rem;
+        font-size: 2vh;
+        margin: 0 auto;
       }
   
       .parentContainer {
@@ -113,8 +122,9 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
-        font-size: 1.7rem;
+        font-size: 1.7vh;
         margin-bottom: 0.5em;
+        margin: 0 auto;
       }
     }
   
@@ -132,7 +142,7 @@
       }
   
       h1 {
-        font-size: 1.5rem;
+        font-size: 1.5vh;
         margin-top: 1.875em;
       }
   
@@ -141,11 +151,11 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3, .paragraph4 {
-        font-size: 1.1rem;
+        font-size: 1.1vh;
         margin-bottom: 0.375em;
       }
       .span1,.span2,.span3,.span4 {
-        font-size: 1.1rem;
+        font-size: 1.1vh;
         margin-top: 0.3125em;
         font-family: 'Montserrat';
       }
