--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -24,9 +24,9 @@
         margin-bottom: 40px; 
   
         img {
-          max-width: 180%;
+          width: 160px;
           height: auto;
-          margin-right: 1.5em;
+          margin-right: 1.25em;
         }
       }
     }
@@ -34,25 +34,26 @@
     h1 {
       font-family: 'SemiBold';
       margin-top: 3.125rem;
-      font-size: 4.5vh;
+      font-size: 3vw;
       align-self: flex-start;
       margin-bottom: 70px;
-      margin-left: 100px;
+      margin-left: 70px;
     }
   
     .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
       font-weight: bold;
       font-family: 'Montserrat';
-      font-size: 4vh;
+      font-size: 1.8vw;
       margin-bottom: 0.625em;
-     margin-bottom: 20px;
+      margin: 0 auto;
     }
   
     .span1,.span2, .span3,.span4 {
-      font-size: 4.5vh;
+      font-size: 2.5vw;
       margin-top: 0.3125em;
       font-family: 'Montserrat';
       margin: 0 auto;
+      margin-right: 10px;
     }
   
     @media screen and (max-width: 1024px) {
@@ -61,7 +62,7 @@
       }
       h1 {
         align-self: center;
-        font-size: 2vh;
+        font-size: 2vw;
       }
   
       .serviceItem {
@@ -77,7 +78,7 @@
   
       h1 {
         margin-top: 1.875em;
-        font-size: 2vh;
+        font-size: 2vw;
       }
   
       .parentContainer {
@@ -85,12 +86,12 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
-        font-size: 1.6vh;
+        font-size: 1.6vw;
         margin-bottom: 0.5em;
         margin: 0 auto;
       }
       .span1,.span2,.span3,.span4 {
-        font-size: 1.8vh;
+        font-size: 1.8vw;
         margin: 0 auto;
       }
     }
@@ -113,8 +114,7 @@
   
       h1 {
         margin-top: 1.875em;
-        font-size: 2vh;
-        margin: 0 auto;
+        font-size: 1.5vw;
       }
   
       .parentContainer {
@@ -122,7 +122,7 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3,.paragraph4 {
-        font-size: 1.7vh;
+        font-size: 1.7vw;
         margin-bottom: 0.5em;
         margin: 0 auto;
       }
@@ -142,7 +142,7 @@
       }
   
       h1 {
-        font-size: 1.5vh;
+        font-size: 1.5vw;
         margin-top: 1.875em;
       }
   
@@ -151,11 +151,11 @@
       }
   
       .paragraph1,.paragraph2,.paragraph3, .paragraph4 {
-        font-size: 1.1vh;
+        font-size: 1.1vw;
         margin-bottom: 0.375em;
       }
       .span1,.span2,.span3,.span4 {
-        font-size: 1.1vh;
+        font-size: 1.1vw;
         margin-top: 0.3125em;
         font-family: 'Montserrat';
       }
