--- a/src/assets/styles/components/Carousels.scss
+++ b/src/assets/styles/components/Carousels.scss
@@ -8,18 +8,18 @@ $background-color_1: transparent;
   }
 }
 
-.swiper-button-prev {
+.swiper-button-prev,
+.swiper-button-next
+{
   background-color: $background-color_1;
   font-size: 24px;
 
   &:after {
     content: none;
   }
+  width: 35px;
+  height: 35px;
 
-  img {
-    width: 30px;
-    height: 30px;
-  }
 }
 
 .mySwiper {
@@ -33,13 +33,3 @@ $background-color_1: transparent;
   }
 }
 
-.swiper-button-next {
-  &:after {
-    content: none;
-  }
-
-  img {
-    width: 30px;
-    height: 30px;
-  }
-}
