--- a/src/assets/styles/components/Carousels.scss
+++ b/src/assets/styles/components/Carousels.scss
@@ -1,25 +1,23 @@
 $background-color_1: transparent;
 
 .swiper-container {
-  height: auto;
-  width: 45vw;
-  @media screen and (max-width: 768px) {
-    width: 90vw;
-  }
+  width: 100%;
 }
 
 .swiper-button-prev,
-.swiper-button-next
-{
+.swiper-button-next {
   background-color: $background-color_1;
   font-size: 24px;
 
   &:after {
-    content: none;
+    display: none;
   }
   width: 35px;
   height: 35px;
-
+  @media screen and (max-width: 425px) {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .mySwiper {
@@ -29,7 +27,5 @@ $background-color_1: transparent;
 
   img {
     width: 85%;
-    margin: 0 auto;
   }
 }
-
