--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding-block: 20vh;
+  padding-block: 80px ;
 }
 
 .col_6 {
