--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -1,32 +1,35 @@
+
+
 .carCardItem {
   width: 560px;
-  height: 550px;
   flex-shrink: 0;
   border-radius: 15px;
   background: #fff;
   margin-right: 20px;
-  padding: 25px;
   font-family: "Montserrat";
+  padding: 25px;
   background-color: #e5e5e1;
+  list-style: none;
 
   .car-image {
     width: 100%;
   }
 
   .car-name {
-    color: #000;
-    margin-top: 25px;
+    color: #333;
     font-family: inherit;
     font-size: 32px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: bold;
+    margin-top: 20px;
   }
 
   .car-struct-list {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
+    margin-top: 19px;
 
     .car-struct-list-item {
       display: flex;
@@ -45,23 +48,21 @@
         margin-right: 15px;
       }
 
-      .car-struct-text{
+      .car-struct-text {
         margin-left: 15px;
         font-weight: 600;
-
       }
-
     }
   }
 
   .car-info {
-    display: flex; 
+    display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
 
     .car-price {
-      color: #19746B;
+      color: #19746b;
       font-family: inherit;
       font-size: 31px;
       font-style: normal;
@@ -76,15 +77,130 @@
       align-items: center;
       gap: 10px;
       border-radius: 5px;
-      background: #19746B;
+      background: #19746b;
       color: #fff;
       font-family: inherit;
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-      border: 1px solid #19746B;
+      border: 1px solid #19746b;
       letter-spacing: -0.33px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .carCardItem {
+    width: 460px;
+    border-radius: 12px;
+    margin-right: 20px;
+    padding: 20px;
+
+    .car-name {
+      font-size: 22px;
+      margin-top: 12px;
+    }
+
+    .car-struct-list {
+      width: 100%;
+      margin-bottom: 12px;
+      margin-top: 12px;
+
+      .car-struct-list-item {
+        height: 30px;
+        padding: 5px 10px;
+        color: #000;
+        font-size: 18px;
+        border-radius: 12px;
+        margin-top: 6px;
+
+        &:not(:last-child) {
+          margin-right: 10px;
+        }
+
+        .car-struct-text {
+          margin-left: 10px;
+        }
+      }
+    }
+
+    .car-info {
+      margin-top: 15px;
+
+      .car-price {
+        font-size: 20px;
+      }
+      .moreButton {
+        height: 25px;
+        padding: 5px 14px;
+        gap: 8px;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .carCardItem {
+    width: 100%;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding: 20px;
+
+    .car-name {
+      font-size: 18px;
+      margin-top: 12px;
+    }
+
+    .car-struct-list {
+      width: 100%;
+      margin-bottom: 12px;
+      margin-top: 8px;
+
+      .car-struct-list-item {
+        height: 30px;
+        padding: 5px 10px;
+        color: #000;
+        font-size: 14px;
+        border-radius: 12px;
+        margin-top: 6px;
+
+        &:not(:last-child) {
+          margin-right: 10px;
+        }
+
+        img {
+          width: 14px;
+        }
+        .car-struct-text {
+          margin-left: 8px;
+        }
+      }
+    }
+
+    .car-info {
+      margin-top: 12px;
+
+      .car-price {
+        font-size: 18px;
+      }
+      .moreButton {
+        height: 22px;
+        padding: 5px 14px;
+        gap: 8px;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .carCardItem {
+    .car-struct-list {
+      .car-struct-list-item {
+        font-size: 10px;
+      }
     }
   }
 }
