Revert " made changes"
This reverts commit 0d5452326906d5f44b91dfd51dc9086bee90ede3.

--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -30,7 +30,7 @@
   }
   
   .serviceTitle {
-    font-family: "Montserrat";
+    font-family: 'SemiBold';
     margin-top: 3.125vw; 
     font-size: 2.5vw;   
     align-self: flex-start;
