--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -30,7 +30,7 @@
   }
   
   .serviceTitle {
-    font-family: 'SemiBold';
+    font-family: "Montserrat";
     margin-top: 3.125vw; 
     font-size: 2.5vw;   
     align-self: flex-start;
