--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -1,83 +1,73 @@
 .parentContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-    margin: 0 auto;
-    padding-top: 3.472vw; 
-    padding-bottom: 9.722vw;
-  }
-  
-  .servicesContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2vw; 
-    justify-content: center;
-    margin-top: 7vh;
-    margin-bottom: 5.333vw; 
-  }
-  
-  .serviceItem {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2.083vw;
-    margin-top: 20px;
-  }
-  
-  .serviceItem img {
-    width: 90px;
-    height: auto;
-    margin-right: 1vw; 
-  }
-  
-  .serviceTitle {
-    font-family: "Montserrat";
-    margin-top: 3.125vw; 
-    font-size: 2.5vw;
-    align-self: flex-start;
-    margin-bottom: 5.208vw; 
-  }
-  
-  .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-    font-weight: bold;
-    font-family: 'Montserrat';
-    font-size: 2vw;
-    margin-bottom: 0.625vw; 
-  }
-  
-  .span1, .span2, .span3, .span4 {
-    font-size: 2vw;
-    margin-top: 0.1302vw; 
-    font-family: 'Montserrat';
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 3.472vw;
+  padding-bottom: 9.722vw;
+}
+
+//   .servicesContainer {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     gap: 2vw;
+//     margin-top: 7vh;
+//     margin-bottom: 5.333vw;
+//   }
+
+//   .serviceItem {
+//     width: 48%;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     margin-bottom: 2.083vw;
+//     margin-top: 20px;
+//    }
+
+//   .serviceItem img {
+//     width: 90px;
+//     height: auto;
+//     margin-right: 1vw;
+//   }
+
+.serviceTitle {
+    
+  font-family: "Montserrat";
+  margin-top: 3.125vw;
+  font-size: 2.5vw;
+  align-self: flex-start;
+  margin-bottom: 5.208vw;
+}
+
+.paragraph1,
+.paragraph2,
+.paragraph3,
+.paragraph4 {
+  font-weight: bold;
+  font-family: "Montserrat";
+  font-size: 2vw;
+  margin-bottom: 0.625vw;
+}
+
+.span1,
+.span2,
+.span3,
+.span4 {
+  font-size: 1.5vw;
+  margin-top: 0.1302vw;
+  font-family: "Montserrat";
+}
+
   @media screen and (max-width: 768px) {
-    .servicesContainer {
-      grid-template-columns: repeat(1, 1fr);
-      margin-top: 10vw;
-    }
-    .serviceItem {
-      flex-direction: row;
-      width: 100%;
-      align-items: center;
-      margin-bottom: 1.875vw;
-      margin-left: 20px;
-    }
-    .serviceItem img {
-      margin-right: 4vw; 
-      width: 10vw; 
-    }
+ 
     .serviceTitle {
-      margin-top: 1.875vw; 
       font-size: 4vw;
-    }
-    .parentContainer {
-      margin-left: 1.736vw; 
     }
     .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
       font-size: 3vw;
-      margin-bottom: 0.5vw; 
       display: inline;
     }
     .span1, .span2, .span3, .span4 {
@@ -86,7 +76,7 @@
       margin-left: 10px;
     }
   }
-  
+
   @media screen and (max-width: 468px) {
     .serviceItem img {
       width: 4em;
@@ -109,7 +99,7 @@
       margin-left: 1.25em;
     }
     .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-      font-size: 3.5vw; 
+      font-size: 3.5vw;
       margin-bottom: 0.5em;
     }
     .span1, .span2, .span3, .span4 {
@@ -117,10 +107,9 @@
       margin-left: 5px;
     }
   }
-  
+
   @media screen and  (max-width: 320px) {
     .serviceTitle {
-      margin-top: 100vw;
       font-size: 5vw;
     }
     .serviceItem img {
@@ -128,12 +117,43 @@
       margin-right: 1em;
     }
     .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-      font-size: 4vw; 
+      font-size: 4vw;
       margin-bottom: 0.5em;
     }
     .span1, .span2, .span3, .span4 {
       font-size: 4.2vw;
-      margin-top: 0.1302vw; 
+      margin-top: 0.1302vw;
       font-family: 'Montserrat';
     }
   }
+
+.row {
+  font-family: "Montserrat";
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 4vw;
+  .col_6 {
+    display: flex;
+    align-items: center;
+    width: 45%;
+    .imgDiv{
+        width: 25%
+    }
+    img{
+        width: 85%;
+        margin-right: 2vw;
+    }
+    @media screen and (max-width: 768px) {
+        .imgDiv{
+            width: 75px;
+            img{
+                width: 75px;
+            }
+        }
+        width: 100%;
+        gap: 20px;
+    }
+  }
+
+}
