--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -34,7 +34,6 @@
 //   }
 
 .serviceTitle {
-    
   font-family: "Montserrat";
   margin-top: 3.125vw;
   font-size: 2.5vw;
@@ -61,71 +60,89 @@
   font-family: "Montserrat";
 }
 
-  @media screen and (max-width: 768px) {
- 
-    .serviceTitle {
-      font-size: 4vw;
-    }
-    .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-      font-size: 3vw;
-      display: inline;
-    }
-    .span1, .span2, .span3, .span4 {
-      font-size: 3vw;
-      display: inline;
-      margin-left: 10px;
-    }
+@media screen and (max-width: 768px) {
+  .serviceTitle {
+    margin-bottom: 50px;
+    font-size: 4vw;
   }
+  .paragraph1,
+  .paragraph2,
+  .paragraph3,
+  .paragraph4 {
+    font-size: 3vw;
+    display: inline;
+  }
+  .span1,
+  .span2,
+  .span3,
+  .span4 {
+    font-size: 3vw;
+    display: inline;
+    margin-left: 10px;
+  }
+}
 
-  @media screen and (max-width: 468px) {
-    .serviceItem img {
-      width: 4em;
-      margin-right: 1.875em;
-    }
-    .serviceItem {
-      flex-direction: row;
-      align-items: center;
-      margin-bottom: 1.875em;
-    }
-    .serviceItem img {
-      margin-right: 1.875em;
-      width: 4em;
-    }
-    .serviceTitle {
-      margin-top: 1.875em;
-      font-size: 4.5vw;
-    }
-    .parentContainer {
-      margin-left: 1.25em;
-    }
-    .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-      font-size: 3.5vw;
-      margin-bottom: 0.5em;
-    }
-    .span1, .span2, .span3, .span4 {
-      font-size: 4vw;
-      margin-left: 5px;
-    }
+@media screen and (max-width: 468px) {
+  .serviceItem img {
+    width: 4em;
+    margin-right: 1.875em;
   }
+  .serviceItem {
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 1.875em;
+  }
+  .serviceItem img {
+    margin-right: 1.875em;
+    width: 4em;
+  }
+  .serviceTitle {
+    margin-top: 1.875em;
+    font-size: 4.5vw;
+  }
+  .parentContainer {
+    margin-left: 1.25em;
+  }
+  .paragraph1,
+  .paragraph2,
+  .paragraph3,
+  .paragraph4 {
+    font-size: 3.5vw;
+    margin-bottom: 0.5em;
+  }
+  .span1,
+  .span2,
+  .span3,
+  .span4 {
+    font-size: 4vw;
+    margin-left: 5px;
+  }
+}
 
-  @media screen and  (max-width: 320px) {
-    .serviceTitle {
-      font-size: 5vw;
-    }
-    .serviceItem img {
-      width: 15vw;
-      margin-right: 1em;
-    }
-    .paragraph1, .paragraph2, .paragraph3, .paragraph4 {
-      font-size: 4vw;
-      margin-bottom: 0.5em;
-    }
-    .span1, .span2, .span3, .span4 {
-      font-size: 4.2vw;
-      margin-top: 0.1302vw;
-      font-family: 'Montserrat';
-    }
+@media screen and (max-width: 320px) {
+  .serviceTitle {
+    font-size: 5vw;
   }
+  .serviceItem img {
+    width: 15vw;
+    margin-right: 1em;
+  }
+  .paragraph1,
+  .paragraph2,
+  .paragraph3,
+  .paragraph4 {
+    font-size: 4vw;
+    margin-bottom: 0.5em;
+  }
+  .span1,
+  .span2,
+  .span3,
+  .span4 {
+    font-size: 4.2vw;
+    margin-top: 0.1302vw;
+    font-family: "Montserrat";
+  }
+}
 
 .row {
   font-family: "Montserrat";
@@ -137,23 +154,22 @@
     display: flex;
     align-items: center;
     width: 45%;
-    .imgDiv{
-        width: 25%
+    .imgDiv {
+      width: 25%;
     }
-    img{
-        width: 85%;
-        margin-right: 2vw;
+    img {
+      width: 85%;
+      margin-right: 2vw;
     }
     @media screen and (max-width: 768px) {
-        .imgDiv{
-            width: 75px;
-            img{
-                width: 75px;
-            }
+      .imgDiv {
+        width: 75px;
+        img {
+          width: 75px;
         }
-        width: 100%;
-        gap: 20px;
+      }
+      width: 100%;
+      gap: 20px;
     }
   }
-
 }
