--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -27,6 +27,11 @@ ul{
   list-style-type: none;
 }
 
+.b24-widget-button-position-bottom-left{
+  bottom: 60px !important; 
+  left: 5vw !important;
+}
+
 @font-face {
   font-family: "Gotham Pro";
   src: url("GothamPro.eot");
