--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -17,7 +17,9 @@
   font-family: "Gotham Pro";
   font-weight: 300;
   span {
-    color: #19746b;
+    &:first-child {
+      color: #19746b;
+    }
     display: block;
   }
 }
@@ -48,17 +50,17 @@
   font-family: "Inter";
   background: #19746b;
   cursor: pointer;
-  transition: all .2s;
-  will-change:contents;
-  &:hover{
+  transition: all 0.2s;
+  will-change: contents;
+  &:hover {
     background-color: transparent;
     color: #19746b;
-    transition: all .2s;
+    transition: all 0.2s;
   }
 }
 
 .button:active {
-transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 @media (max-width: 768px) {
@@ -99,7 +101,7 @@ transform: scale(0.95);
 }
 
 @media (max-width: 620px) {
-  .title{
-    font-size:6.4vw;
+  .title {
+    font-size: 6.4vw;
   }
 }
