Add Loader component

--- a/src/assets/styles/pages/Home/FAQ.module.scss
+++ b/src/assets/styles/pages/Home/FAQ.module.scss
@@ -1,7 +1,7 @@
 .question-section {
   width: 70%;
   margin: 85px auto;
-  font-family: Montserrat;
+  font-family: "Montserrat";
 
   .question-title {
     color: #000;
