--- a/src/assets/styles/components/Loader.scss
+++ b/src/assets/styles/components/Loader.scss
@@ -1,23 +1,22 @@
 .lds-dual-ring {
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
   width: 80px;
   height: 80px;
+  padding: 20% 50%;
 }
 
 .lds-dual-ring:after {
   content: " ";
   display: block;
-  width: 64px;
-  height: 64px;
+  width: 80px;
+  height: 80px;
   margin: 8px;
   border-radius: 50%;
   border: 6px solid #19746b;
   border-color: #19746b transparent #19746b transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
-@keyframes lds-dual-ring {
+@keyframes lds-dual-ring {  
   0% {
     transform: rotate(0deg);
   }
