Header postion fixed

--- a/src/assets/styles/components/Catalog.module.scss
+++ b/src/assets/styles/components/Catalog.module.scss
@@ -9,7 +9,7 @@
     border-top: 1px solid #19746b;
     padding: 30px 100px;
     font-family: "Montserrat";
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     width: 100%;
