--- a/src/assets/styles/components/OverNavbar.module.scss
+++ b/src/assets/styles/components/OverNavbar.module.scss
@@ -1,10 +1,16 @@
 @import '../globalStyles.scss';
 
 .OverNavbar{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 10px;
     background-color: #f4f4f0;
     display: flex;
     align-items: center;
     gap: 60px;
     flex-direction: row-reverse ;
     font-family: "Open Sans";
+    @media screen and (max-width: 1024px) {
+        display: none;
+      }
 }
