--- a/src/assets/styles/pages/Home/OurServices.module.scss
+++ b/src/assets/styles/pages/Home/OurServices.module.scss
@@ -139,7 +139,7 @@
     }
     @media screen and (max-width: 768px) {
       .imgDiv {
-        width: 75px;
+        width: 75%;
         img {
           width: 75px;
         }
