--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -5,9 +5,20 @@
   outline: none;
 }
 
-body {
+body, html {
+  height: 100%;
   background-color: #f4f4f0;
   overflow-x: hidden;
+}
+
+#root, .wrapper{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+main{
+  flex-grow: 1;
 }
 
 button,
