--- a/src/assets/styles/pages/Error404/PageNotFound.module.scss
+++ b/src/assets/styles/pages/Error404/PageNotFound.module.scss
@@ -1,24 +1,49 @@
-.NotFoundBlock{
+.NotFoundBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  font-family: "Gotham Pro";
+  height: 100%;
+  text-align: center;
+  @media screen and (max-width: 728px) {
+    margin-top: 150px;
+    justify-content: unset;
+  }
+  svg {
+    margin-bottom: 20px;
+    transform: scale(2);
+    @media screen and (max-width: 728px) {
+      transform: unset;
+    }
+  }
+  h1 {
+    font-size: 3vw;
+    margin-top: 40px;
+    @media screen and (max-width: 728px) {
+      font-size: 5vw;
+      margin-top: unset;
+    }
+  }
+  h2 {
+    font-size: 3vw;
+    margin-top: 20px;
     display: flex;
+    gap: 10px;
+    align-items: center;
     justify-content: center;
-    align-items: center;    
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    font-family: "Gotham Pro";
-    height: 100%;
-    text-align: center;
-    svg{
-        margin-bottom: 20px;
+    #smile {
+      writing-mode: vertical-rl;
+      color: black;
     }
-    h2{
-        margin-top: 30px;
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        justify-content: center;
-        span{
-            writing-mode: vertical-rl;
-        }
+
+    @media screen and (max-width: 728px) {
+      font-size: 5.5vw;
     }
+  }
+  #error {
+    color: red;
+  }
 }
