--- a/src/assets/styles/components/OverNavbar.module.scss
+++ b/src/assets/styles/components/OverNavbar.module.scss
@@ -9,7 +9,8 @@
     align-items: center;
     gap: 60px;
     flex-direction: row-reverse ;
-    font-family: "Open Sans";
+    font-family: "Gotham Pro";
+    font-weight: bold;
     @media screen and (max-width: 1024px) {
         display: none;
       }
