--- a/src/assets/styles/components/ModalWindow.module.scss
+++ b/src/assets/styles/components/ModalWindow.module.scss
@@ -38,3 +38,10 @@
   font-size: 2vw;
   text-align: center;
 }
+button{
+  border: none;
+  font-family: "Gotham Pro";
+  color: #000;
+  transition: all 0.2s;
+  font-size: 19px;
+}
