--- a/src/assets/styles/components/ModalWindow.module.scss
+++ b/src/assets/styles/components/ModalWindow.module.scss
@@ -1,23 +1,21 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  
+  position: fixed;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .modalContent {
   background-color: #fff;
-  padding: 150px;
-  border-radius: 8px;
-  }
+  padding: 200px;
+  border-radius: 20px;
+}
 
-.close{
+.close {
   border: none;
   font-size: 3rem;
   font-size: 1.5vw;
@@ -28,11 +26,13 @@
   border-radius: 10px;
   margin-top: 40px;
 }
-.text{
+
+.text {
   font-size: 2vw;
   text-align: center;
 }
-button{
+
+button {
   border: none;
   font-family: "Gotham Pro";
   color: #000;
