--- a/src/assets/styles/pages/Home/ApplicationForm.module.scss
+++ b/src/assets/styles/pages/Home/ApplicationForm.module.scss
@@ -9,7 +9,7 @@
   background-position: center;
 }
 
-.application-form {
+.application_form {
   display: flex;
   flex-direction: column;
   justify-content: center;
