--- a/src/assets/styles/pages/Home/FAQ.module.scss
+++ b/src/assets/styles/pages/Home/FAQ.module.scss
@@ -1,9 +1,9 @@
-.question-section {
+.question_section {
   width: 70%;
   margin: 85px auto;
   font-family: "Montserrat";
 
-  .question-title {
+  .question_title {
     color: #000;
     font-family: inherit;
     text-align: center;
@@ -13,7 +13,7 @@
     line-height: normal;
   }
 
-  .questions-lists {
+  .questions_lists {
     margin-top: 80px;
   }
 }
