--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.block-title {
+.block_title {
   display: flex;
   flex-direction: column;
   gap: 47px;
@@ -87,7 +87,7 @@
     }
   }
 
-  .block-title {
+  .block_title {
     display: flex;
     align-items: center;
     flex-direction: column;
