--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -1,10 +1,10 @@
 @media screen and (min-width:1025px) {
-    .mob-nav{
+    .mob_nav{
       display: none;
     }  
   }
   
-  .mob-nav{
+  .mob_nav{
     background-color: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding:15px;
@@ -20,7 +20,7 @@
     justify-content: space-between;
   }
   
-  .burger-btn {
+  .burger_btn {
     width: 30px;
     height: 25px;
     position: relative;
@@ -36,7 +36,7 @@
     }
   }
   
-  .burger-btn::before {
+  .burger_btn::before {
     content: "";
     position: absolute;
     top: 0;
@@ -45,7 +45,7 @@
     height: 2px;
   }
   
-  .burger-btn::after {
+  .burger_btn::after {
     content: "";
     position: absolute;
     bottom: 0;
