--- a/src/assets/styles/layout/Footer.module.scss
+++ b/src/assets/styles/layout/Footer.module.scss
@@ -11,7 +11,7 @@ footer {
   a {
     color: #fff;
   }
-  .footer-content {
+  .footer_content {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -19,10 +19,10 @@ footer {
     padding-bottom: 4vw;
     gap: 50px;
 
-    .row-1,
-    .row-2,
-    .row-3,
-    .row-4 {
+    .row_1,
+    .row_2,
+    .row_3,
+    .row_4 {
       width: 20%;
       ul li:first-child {
         margin-bottom: 1vw;
@@ -52,7 +52,7 @@ footer {
     }
   }
 
-  .social-media {
+  .social_media {
     display: flex;
     justify-content: center;
     margin-bottom: 1.5em;
@@ -71,11 +71,11 @@ footer {
   }
 
   @media screen and (max-width: 1024px) {
-    .footer-content {
-      .row-1,
-      .row-2,
-      .row-3,
-      .row-4 {
+    .footer_content {
+      .row_1,
+      .row_2,
+      .row_3,
+      .row_4 {
         ul li:first-child {
           font-size: 1.5rem;
           margin-bottom: 3vw;
@@ -92,16 +92,16 @@ footer {
     .logo{
       padding-block: 6.25vw;
     }
-    .footer-content {
+    .footer_content {
       padding-bottom: 0;
       gap: 0;
       justify-content: space-between;
       width: 90%;
       margin: 0 auto;
-      .row-1,
-      .row-2,
-      .row-3,
-      .row-4 {
+      .row_1,
+      .row_2,
+      .row_3,
+      .row_4 {
         margin-bottom: 30px;
         width: 48%;
         ul li:first-child {
@@ -114,7 +114,7 @@ footer {
         }
       }
     }
-    .social-media {
+    .social_media {
       margin-top: 50px;
       margin-bottom: 0;
       ul li {
@@ -127,16 +127,16 @@ footer {
   }
 
   @media only screen and (min-width: 426px) and (max-width: 769px) {
-    .footer-content {
+    .footer_content {
       padding-bottom: 2rem;
       gap: 0;
       justify-content: space-between;
       width: 90%;
       margin: 0 auto;
-      .row-1,
-      .row-2,
-      .row-3,
-      .row-4 {
+      .row_1,
+      .row_2,
+      .row_3,
+      .row_4 {
         margin-bottom: 30px;
         width: 48%;
         ul li:first-child {
@@ -152,7 +152,7 @@ footer {
       }
     }
 
-    .social-media {
+    .social_media {
       margin-top: 3vw;
       margin-bottom: 0;
       ul li {
