--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -24,7 +24,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  .col-6 {
+  .col_6 {
     display: flex;
     align-items: center;
     .searchIco_div {
