--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -46,15 +46,15 @@ main {
     margin-bottom: 130px;
   }
 
-  .car-convience,
-  .car-convience-bottom {
+  .car_convience,
+  .car_convience_bottom {
     width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    .car-img {
+    .car_img {
       width: 50%;
 
       img {
@@ -62,7 +62,7 @@ main {
       }
     }
 
-    .convience-list {
+    .convience_list {
       width: 50%;
       font-size: 2vw;
       font-weight: 600;
@@ -76,23 +76,23 @@ main {
     }
   }
 
-  .car-convience-bottom {
+  .car_convience_bottom {
     width: 85%;
     display: flex;
     justify-content: end;
     margin: 0 auto;
     position: relative;
-    .convience-list {
+    .convience_list {
       width: 70%;
       left: 0;
       position: absolute;
     }
-    .car-img {
+    .car_img {
       width: 40%;
     }
   }
 
-  .car-infoList {
+  .car_infoList {
     width: 80%;
     text-align: left;
     margin: 100px auto;
@@ -158,7 +158,7 @@ main {
     .AboutUsText {
       margin-bottom: 40px;
     }
-    .car-infoList {
+    .car_infoList {
       width: 90%;
       margin: 40px auto;
 
@@ -170,15 +170,15 @@ main {
         }
       }
     }
-    .car-convience,
-    .car-convience-bottom {
+    .car_convience,
+    .car_convience_bottom {
       display: block;
 
-      .car-img {
+      .car_img {
         width: 90%;
       }
 
-      .convience-list {
+      .convience_list {
         width: 90%;
         letter-spacing: 1px;
         margin: 0 auto;
@@ -189,15 +189,15 @@ main {
       }
     }
 
-    .car-convience-bottom {
+    .car_convience_bottom {
       display: flex;
       flex-direction: column-reverse;
       position: relative;
-      .convience-list {
+      .convience_list {
         width: 100%;
         position: static;
       }
-      .car-img {
+      .car_img {
         width: 100%;
       }
     }
@@ -221,7 +221,7 @@ main {
     .AboutUsText {
       margin-bottom: 20px;
     }
-    .car-infoList {
+    .car_infoList {
       margin: 20px auto;
 
       li {
@@ -232,9 +232,9 @@ main {
         }
       }
     }
-    .car-convience,
-    .car-convience-bottom {
-      .convience-list {
+    .car_convience,
+    .car_convience_bottom {
+      .convience_list {
         margin-top: 15px;
         margin-bottom: 15px;
       }
